task-manager/src/App.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');

* {
  font-family: 'Poppins', sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

App{
  text-align: center;
}

body {
  background: #124779;
  display: flex;
  justify-content: center;
  align-items: center;
}

.App {
  text-align: center;
}

h1 {
  color: #fff;
  margin-bottom: 0.5rem;
  font-size: 2rem;
  text-align: center;
}

@media screen and (max-width: 768px) {
.TodoWrapper {
  background: #1A1A40;
  margin-top: 1rem;
  padding: 0.5rem;
  border-radius: 5px;
  width: 90vw;
}
}

@media screen and (min-width: 1024px) {
  .TodoWrapper {
    background: #1A1A40;
    margin-top: 5rem;
    padding: 2rem;
    border-radius: 5px;
  }
}

.TodoForm {
  width: 100%;
  margin-bottom: 1rem;
  /* margin: 0;
  padding: 0 */
}

@media screen and (max-width: 768px) {
  .todo-input{
    outline: none;
    background: none;
    border: 1px solid #124779;
    padding: 0.5rem 1rem;
    margin-top: 0rem;
    margin-bottom: 2rem;
    width: 100%;
    color: #fff;
  }

  .todo-btn {
    background: #124779;
    color: #fff;
    border: none;
    padding: 0.55rem;
    cursor: pointer;
    width:30%;
  }

  #priorityLevel {
    outline: none;
    background: none;
    border: 1px solid #124779;
    padding-top: 0.455rem;
    padding-bottom: 0.5rem;
    margin-top: 0rem;
    margin-bottom: 3rem;
    width: 5rem;
    color: #fff;
    width: 40%;
}

.priority-btn {
  background: none;
  color: #fff;
  width: 3rem;
  border: 1px solid #124779;
  padding: 0.5rem;
  cursor: pointer;
  width: 30%;
}
}

@media screen and (min-width: 1024px) {
.todo-input  {
  outline: none;
  background: none;
  border: 1px solid #124779;
  padding: 0.5rem 1rem;
  margin-top: 0rem;
  margin-bottom: 2rem;
  width: 20rem;
  color: #fff;
}

.todo-btn {
  background: #124779;
  color: #fff;
  border: none;
  padding: 0.55rem;
  cursor: pointer;
}

#priorityLevel {
    outline: none;
    background: none;
    border: 1px solid #124779;
    padding-top: 0.455rem;
    padding-bottom: 0.5rem;
    margin-top: 0rem;
    margin-bottom: 3rem;
    width: 5rem;
    color: #fff;   
}

.priority-btn {
  background: none;
  color: #fff;
  width: 3rem;
  border: 1px solid #124779;
  padding: 0.5rem;
  cursor: pointer;
}

}



#priorityLevel option {
  background-color: #1A1A40; /* Background color for options */
  color: #fff; /* Text color for options */
  padding: 0.5rem 1rem;
}

#priorityLevel .High:hover {
  background-color: red;
  border: 3px solid pink;
}


.todo-input::placeholder {
  color: #ffffff4d;
}

.Todo {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: #124779;
  color: #fff;
  padding: 0.75rem 1rem;
  border-radius: 5px;
  margin-bottom: 1rem;
}


.fa-trash {
  margin-left: 0.75rem;
}

.incompleted {
  color: #fff;
  cursor: pointer;
}

.completed {
  color: #c5aeff;
  text-decoration: line-through;
  cursor: pointer;
}

.edit-icon,
.delete-icon {
  cursor: pointer;
}

